# livekit-voice-agent

./: .env.local  README.md  agent-with-fallback-adapter.py  agent-with-metrics-collection.py  agent-with-tools-and-mcp.py  agent.py  pyproject.toml
